--- a/dab-walking-skeleton/compose.yaml
+++ b/dab-walking-skeleton/compose.yaml
@@ -6,17 +6,17 @@ services:
       - ./server:/app
     ports:
       - 8000:8000
+    env_file:
+      - project.env
+    depends_on:
+      - database
 
   client:
     build: client
     restart: unless-stopped
     volumes:
-      - type: bind
-        source: ./client
-        target: /app
-      - type: volume
-        source: client_node_modules
-        target: /app/node_modules
+      - ./client:/app
+      - /app/node_modules
     ports:
       - 4321:4321
     depends_on:
@@ -30,5 +30,24 @@ services:
     depends_on:
       - client
 
-volumes:
-  client_node_modules:
+  database-migrations:
+    image: flyway/flyway:10
+    env_file:
+      - project.env
+    depends_on:
+      - database
+    volumes:
+      - ./database-migrations:/flyway/sql
+    command: -connectRetries=60 -baselineOnMigrate=true migrate
+
+  database:
+    container_name: postgresql_database
+    image: postgres:17.0
+    restart: unless-stopped
+    env_file:
+      - project.env
+    command: >
+      postgres
+      -c shared_preload_libraries=auto_explain,pg_stat_statements
+      -c auto_explain.log_min_duration=10
+
