--- a/dab-overarching-project/client/package.json
+++ b/dab-overarching-project/client/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@astrojs/svelte": "^7.0.4",
-    "@deno/astro-adapter": "^0.2.0", 
-    "astro": "^2.0.0",          
-    "svelte": "^5.20.2" 
+    "@deno/astro-adapter": "^0.2.0",
+    "astro": "5.3.0",
+    "svelte": "^5.20.2"
   }
 }
