--- a/dab-walking-skeleton/client/package.json
+++ b/dab-walking-skeleton/client/package.json
@@ -9,9 +9,6 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/svelte": "^7.0.4",
-    "@deno/astro-adapter": "^0.2.0",
-    "astro": "^5.3.0",
-    "svelte": "^3.59.0"
+    "astro": "^5.3.0"
   }
 }
