--- a/dab-walking-skeleton/compose.yaml
+++ b/dab-walking-skeleton/compose.yaml
@@ -13,7 +13,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.server-router.entrypoints=web"
-      - "traefik.http.routers.server-router.rule=PathPrefix(`/`)"
+      - "traefik.http.routers.server-router.rule=PathPrefix(`/remove`)"
       - "traefik.http.services.server-service.loadbalancer.server.port=8000"
 
   client:
@@ -65,6 +65,17 @@ services:
     volumes:
       - ./redis/redis.conf:/usr/local/etc/redis/redis.conf
 
+  consumer-server:
+    build: consumer-server
+    restart: unless-stopped
+    volumes:
+      - ./consumer-server:/app
+    env_file:
+      - project.env
+    depends_on:
+      - redis
+      - database
+
   traefik:
     image: traefik:v3.3
     command:
@@ -76,15 +87,4 @@ services:
       - "8000:8000"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
-
-  consumer-server:
-    build: consumer-server
-    restart: unless-stopped
-    volumes:
-      - ./consumer-server:/app
-    env_file:
-      - project.env
-    depends_on:
-      - redis
-      - database
 
